<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        card_view:cardCornerRadius="4dp">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/lLRowIntervenciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
            android:id="@+id/numParteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
            android:layout_margin="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:text="@string/num_parte" />

            <TextView
                android:id="@+id/tvNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="TextView"
                card_view:layout_constraintTop_toBottomOf="@+id/numParteLabel"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/tecnico"
                android:textColor="@android:color/black"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tvNumero"
               />

            <TextView
                android:id="@+id/tvTecnico"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="TextView"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/textView32" />

            <TextView
                android:id="@+id/textView320"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/fecha_visita"
                android:textColor="@android:color/black"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tvTecnico" />

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="TextView"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/textView320" />

            <TextView
                android:id="@+id/texjkjg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/sintomas"
                android:textColor="@android:color/black"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tvFecha" />

            <TextView
                android:id="@+id/tvSintomas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="TextView"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/texjkjg" />

            <TextView
                android:id="@+id/rtfdwsdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/operacion_efectuada"
                android:textColor="@android:color/black"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tvSintomas" />

            <TextView
                android:id="@+id/tvOperacionEfectuada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="TextView"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/rtfdwsdf" />

            <TextView
                android:id="@+id/textVie2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/total"
                android:textColor="@android:color/black"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tvOperacionEfectuada" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:text="TextView"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/textVie2" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>